tests222/tests2/test338.out
lli: <stdin>:1:1: error: expected top-level entity
line 6: function z is not defined
^
